syntax = "proto3";

package indexer.v1;

import "meshapi/gateway/annotations.proto";
import "indexer/v1/types.proto";

service IndexerService {
  // GetCommitmentTx returns information about a specific commitment transaction identified by the
  // provided txid.
  rpc GetCommitmentTx(GetCommitmentTxRequest) returns (GetCommitmentTxResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/commitmentTx/{txid}"
    };
  };

  // GetForfeitTxs returns the list of forfeit transactions that were submitted for the provided
  // commitment transaction.
  // The response may include pagination information if the results span multiple pages.
  rpc GetForfeitTxs(GetForfeitTxsRequest) returns (GetForfeitTxsResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/commitmentTx/{txid}/forfeitTxs"
    };
  };
  
  // GetConnectors returns the tree of connectors for the provided commitment transaction.
  // The response includes a list of connector txs with details on the tree posistion and may
  // include pagination information if the results span multiple pages.
  rpc GetConnectors(GetConnectorsRequest) returns (GetConnectorsResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/commitmentTx/{txid}/connectors"
    };
  };

  // GetVtxoTree returns the vtxo tree for the provided batch outpoint.
  // The response includes a list of txs with details on the tree posistion and may
  // include pagination information if the results span multiple pages.
  rpc GetVtxoTree(GetVtxoTreeRequest) returns (GetVtxoTreeResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/tree"
    };
  };

  // GetVtxoTreeLeaves returns the list of leaves (vtxo outpoints) of the tree(s) for the
  // provided batch outpoint.
  // The response may be paginated if the results span multiple pages.
  rpc GetVtxoTreeLeaves(GetVtxoTreeLeavesRequest) returns (GetVtxoTreeLeavesResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/tree/leaves"
    };
  };

  // GetVtxos returns the list of vtxos based on the provided filter. Vtxos can be retrieved either
  // by addresses or by outpoints, and optionally filtered by spendable or spent only.
  // The response may be paginated if the results span multiple pages.
  rpc GetVtxos(GetVtxosRequest) returns (GetVtxosResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/vtxos"
    };
  };
  
  // GetVtxoChain returns the the chain of ark txs that starts from spending any vtxo leaf and ends
  // with the creation of the provided vtxo outpoint.
  // The response may be paginated if the results span multiple pages.
  rpc GetVtxoChain(GetVtxoChainRequest) returns (GetVtxoChainResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/vtxo/{outpoint.txid}/{outpoint.vout}/chain"
    };
  }

  // GetVirtualTxs returns the virtual transactions in hex format for the specified txids.
  // The response may be paginated if the results span multiple pages.
  rpc GetVirtualTxs(GetVirtualTxsRequest) returns (GetVirtualTxsResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/virtualTx/{txids}"
    };
  }

  // GetBatchSweepTransactions returns the list of transaction (txid) that swept a given batch
  // output.
  // In most cases the list contains only one txid, meaning that all the amount locked for a
  // vtxo tree has been claimed back.
  // If any of the leaves of the tree have been unrolled onchain before the expiration, the
  // list will contain many txids instead.
  // In a binary tree with 4 or more leaves, 1 unroll causes the server to broadcast 3 txs to sweep
  // the whole rest of tree for example.
  // If a whole vtxo tree has been unrolled onchain, the list of txids for that batch output is
  // empty.
  rpc GetBatchSweepTransactions(GetBatchSweepTransactionsRequest) returns (GetBatchSweepTransactionsResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/batch/{batch_outpoint.txid}/{batch_outpoint.vout}/sweepTxs"
    };
  }

  // SubscribeForScripts allows to subscribe for tx notifications related to the provided vtxo
  // scripts. It can also be used to update an existing subscribtion by adding new scripts to it.
  rpc SubscribeForScripts(SubscribeForScriptsRequest) returns (SubscribeForScriptsResponse) {
    option (meshapi.gateway.http) = {
      post: "/v1/script/subscribe"
      body: "*"
    };
  };

  // UnsubscribeForScripts allows to remove scripts from an existing subscription.
  rpc UnsubscribeForScripts(UnsubscribeForScriptsRequest) returns (UnsubscribeForScriptsResponse) {
    option (meshapi.gateway.http) = {
      post: "/v1/script/unsubscribe"
      body: "*"
    };
  };

  
  // GetSubscription is a server-side streaming RPC which allows clients to receive real-time
  // notifications on transactions related to the subscribed vtxo scripts.
  // The subscription can be created or updated by using the SubscribeForScripts and 
  // UnsubscribeForScripts RPCs.
  rpc GetSubscription(GetSubscriptionRequest) returns (stream GetSubscriptionResponse) {
    option (meshapi.gateway.http) = {
      get: "/v1/script/subscription/{subscription_id}"
      stream: {
        disable_chunked_transfer: true
        disable_websockets: true
      }
    };
  };
}

message GetCommitmentTxRequest {
  string txid = 1;
}
message GetCommitmentTxResponse {
  int64 started_at = 1;
  int64 ended_at = 2;
  map<uint32, Batch> batches = 3;
  uint64 total_input_amount = 4;
  int32 total_input_vtxos = 5;
  uint64 total_output_amount = 6;
  int32 total_output_vtxos = 7;
}

message GetForfeitTxsRequest {
  string txid = 1;
  PageRequest page = 2;
}
message GetForfeitTxsResponse {
  repeated string txids = 1;
  PageResponse page = 2;
}

message GetConnectorsRequest {
  string txid = 1;
  PageRequest page = 2;
}
message GetConnectorsResponse {
  repeated Node connectors = 1;
  PageResponse page = 2;
}

message GetVtxoTreeRequest {
  Outpoint batch_outpoint = 1;
  PageRequest page = 2;
}
message GetVtxoTreeResponse {
  repeated Node vtxo_tree = 1;
  PageResponse page = 2;
}

message GetVtxoTreeLeavesRequest {
  Outpoint batch_outpoint = 1;
  PageRequest page = 2;
}
message GetVtxoTreeLeavesResponse {
  repeated Outpoint leaves = 1;
  PageResponse page = 2;
}

message GetVtxosRequest {
  // Either specify a list of vtxo scripts.
  repeated string scripts = 1;
  // Or specify a list of vtxo outpoints. The 2 filters are mutually exclusive.
  repeated string outpoints = 2;
  // Retrieve only spendable vtxos
  bool spendable_only = 3;
  // Retrieve only spent vtxos.
  bool spent_only = 4;
  // Retrieve only recoverable vtxos (notes, subdust or swept vtxos).
  // The 3 filters are mutually exclusive,
  bool recoverable_only = 5;
  PageRequest page = 6;
}
message GetVtxosResponse {
  repeated Vtxo vtxos = 1;
  PageResponse page = 2;
}

message GetVtxoChainRequest {
  Outpoint outpoint = 1;
  PageRequest page = 2;
}
message GetVtxoChainResponse {
  repeated Chain chain = 1;
  PageResponse page = 2;
}

message GetVirtualTxsRequest {
  repeated string txids = 1;
  PageRequest page = 2;
}
message GetVirtualTxsResponse {
  repeated string txs = 1;
  PageResponse page = 2;
}

message GetBatchSweepTransactionsRequest {
  Outpoint batch_outpoint = 1;

}
message GetBatchSweepTransactionsResponse {
  repeated string swept_by = 1;
}

message SubscribeForScriptsRequest {
  repeated string scripts = 1;
  // If set, update an existing subscription
  string subscription_id = 2;
}
message SubscribeForScriptsResponse {
  string subscription_id = 1;
}

message UnsubscribeForScriptsRequest {
  string subscription_id = 1;
  // If empty, unsubscribe all scripts
  repeated string scripts = 2; 
}
message UnsubscribeForScriptsResponse {}

message GetSubscriptionRequest {
  string subscription_id = 1;
}
message GetSubscriptionResponse {
  oneof data {
    Heartbeat heartbeat = 1;
    SubscriptionEvent event = 2;
  }
}